error promote.txt
2026-02-05 13:14:15.163 [error] Exception in ASGI application

Traceback (most recent call last):
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
  File "/var/task/_vendor/sqlalchemy/engine/default.py", line 952, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 3:                 VALUES (3, :scopes::jsonb, NOW())
                                   ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/var/task/_vendor/uvicorn/protocols/http/httptools_impl.py", line 416, in run_asgi
    result = await app(  # type: ignore[func-returns-value]
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/uvicorn/middleware/proxy_headers.py", line 60, in __call__
    return await self.app(scope, receive, send)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/vc__handler__python.py", line 340, in __call__
    await self.app(new_scope, receive, send)
  File "/var/task/_vendor/fastapi/applications.py", line 1138, in __call__
    await super().__call__(scope, receive, send)
  File "/var/task/_vendor/starlette/applications.py", line 107, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/var/task/_vendor/starlette/middleware/errors.py", line 186, in __call__
    raise exc
  File "/var/task/_vendor/starlette/middleware/errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "/var/task/_vendor/starlette/middleware/base.py", line 191, in __call__
    with recv_stream, send_stream, collapse_excgroups():
                                   ^^^^^^^^^^^^^^^^^^^^
  File "/var/lang/lib/python3.12/contextlib.py", line 158, in __exit__
    self.gen.throw(value)
  File "/var/task/_vendor/starlette/_utils.py", line 85, in collapse_excgroups
    raise exc
  File "/var/task/_vendor/starlette/middleware/base.py", line 193, in __call__
    response = await self.dispatch_func(request, call_next)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/src/main.py", line 491, in tenant_context_middleware
    response = await call_next(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/starlette/middleware/base.py", line 168, in call_next
    raise app_exc from app_exc.__cause__ or app_exc.__context__
  File "/var/task/_vendor/starlette/middleware/base.py", line 144, in coro
    await self.app(scope, receive_or_disconnect, send_no_error)
  File "/var/task/_vendor/starlette/middleware/sessions.py", line 85, in __call__
    await self.app(scope, receive, send_wrapper)
  File "/var/task/_vendor/starlette/middleware/cors.py", line 93, in __call__
    await self.simple_response(scope, receive, send, request_headers=headers)
  File "/var/task/_vendor/starlette/middleware/cors.py", line 144, in simple_response
    await self.app(scope, receive, send)
  File "/var/task/_vendor/starlette/middleware/exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "/var/task/_vendor/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/var/task/_vendor/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/var/task/_vendor/fastapi/middleware/asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "/var/task/_vendor/starlette/routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/var/task/_vendor/starlette/routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "/var/task/_vendor/starlette/routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "/var/task/_vendor/fastapi/routing.py", line 115, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "/var/task/_vendor/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/var/task/_vendor/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/var/task/_vendor/fastapi/routing.py", line 101, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/fastapi/routing.py", line 355, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/fastapi/routing.py", line 243, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/src/routers/team.py", line 216, in api_team_promote
    svc_staff.set_scopes(int(usuario_id), [])
  File "/var/task/src/services/staff_service.py", line 254, in set_scopes
    self.db.execute(
  File "/var/task/_vendor/sqlalchemy/orm/session.py", line 2351, in execute
    return self._execute_internal(
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/sqlalchemy/orm/session.py", line 2258, in _execute_internal
    result = conn.execute(
             ^^^^^^^^^^^^^
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1419, in execute
    return meth(
           ^^^^^
  File "/var/task/_vendor/sqlalchemy/sql/elements.py", line 527, in _execute_on_connection
    return connection._execute_clauseelement(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1641, in _execute_clauseelement
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1846, in _execute_context
    return self._exec_single_context(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1986, in _exec_single_context
    self._handle_dbapi_exception(
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 2363, in _handle_dbapi_exception
    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e
  File "/var/task/_vendor/sqlalchemy/engine/base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
  File "/var/task/_vendor/sqlalchemy/engine/default.py", line 952, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near ":"
LINE 3:                 VALUES (3, :scopes::jsonb, NOW())
                                   ^

[SQL: 
                INSERT INTO staff_permissions(usuario_id, scopes, updated_at)
                VALUES (%(uid)s, :scopes::jsonb, NOW())
                ON CONFLICT (usuario_id)
                DO UPDATE SET scopes = EXCLUDED.scopes, updated_at = NOW()
                ]
[parameters: {'uid': 3}]
(Background on this error at: https://sqlalche.me/e/20/f405)